argocd-apps-rke2/workloads/demo-nextjs-16/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-nextjs-16
  namespace: demo-nextjs-16
  labels:
    app.kubernetes.io/name: demo-nextjs-16
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: nextjs-16.192.168.250.165.sslip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo-nextjs-16
                port:
                  number: 80
    - host: nextjs-16.192.168.250.223.sslip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo-nextjs-16
                port:
                  number: 80
    - host: nextjs-demo.192.168.250.165.sslip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo-nextjs-16
                port:
                  number: 80
    - host: nextjs-demo.192.168.250.223.sslip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo-nextjs-16
                port:
                  number: 80
    - host: nextjs.192.168.250.165.sslip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo-nextjs-16
                port:
                  number: 80
    - host: nextjs.192.168.250.223.sslip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo-nextjs-16
                port:
                  number: 80
